# zoe_experiment_1

./: 000-Intro.txt  info_01.txt
02-cannot-harm(new-feautures[x:1;y2])/: -----------------CMakeCache.txt  002_var.zoe  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  _unacceptable.c  binding.c  cmake_install.cmake  lexer.c  lib-note.txt  tokenizer.h  unacceptable.c  zoe  zoejamie.txt
02-cannot-harm(new-feautures[x:1;y2])/000-New/: 002_var.zoe  006-boolean.zoe  012-loop3.zoe  014-array-for-today.zoe  016-Unused.zoe  401 -  a:1;b:2.zoe  ZZZ--014-HISTORY.zoe
02-cannot-harm(new-feautures[x:1;y2])/READY-TO-DROP--000-New_BAKUP_with_scribble/: 0000-changes.xls  001.zoe  002_var.zoe  003-numbers.zoe  004-plus_minus_etc.zoe  005-modulo-etc.zoe  006-boolean.zoe  007-function01.zoe  008-function02--NOT-YET-TOUCHED.zoe  009-if_then_else.zoe  010-loop.zoe  011-loop2.zoe  012-loop3.zoe  013-flow-control.zoe
02-cannot-harm(new-feautures[x:1;y2])/zzz_toy/000-New/: 005-modulo-etc.zoe  007-function01.zoe  009-if_then_else.zoe
02-cannot-harm(new-feautures[x:1;y2])/zzz_toy/000-New--(IS-IT-OLD?)/: .~lock.0000-changes.xls#  0000-at-the-start.txt  003-numbers.zoe  004-plus_minus_etc.zoe  008-function02--NOT-YET-TOUCHED.zoe  010-loop.zoe  011-loop2.zoe  013-flow-control.zoe  015-array-more.zoe  test1.sh
02-cannot-harm(new-feautures[x:1;y2])/zzz_toy/svr/: lol.html  lol2.html  svr.lol
02-cannot-harm(new-feautures[x:1;y2])/zzz_toy/svr/sd/: lol2.html
02-cannot-harm(new-feautures[x:1;y2])/zzz_toy/unnacceptable/: unacceptable01.lol  unacceptable01.zoe
03/zoe-master/: zoe  (+8 more)
(+32 files in other folders)
